Next iteration of the refactor and bugs fixing.
Two base domain classes added - DomainObject and Intention